fix: flex-grow overflow issue for taskstable-component

--- a/src/components/TasksTable/TasksTable.module.css
+++ b/src/components/TasksTable/TasksTable.module.css
@@ -1,4 +1,8 @@
 .table {
+  box-sizing: border-box;
+  max-height: calc(100vh - 160px);
+  display: flex;
+  flex-direction: column;
 }
 .table > div:first-child {
   border: none;
@@ -10,7 +14,7 @@
   margin-bottom: 0.5rem;
 }
 .tasks {
-  max-height: 65vh;
+  flex-grow: 1;
   overflow: scroll;
 }
 .tasks::-webkit-scrollbar {
@@ -33,6 +37,8 @@
   -webkit-backdrop-filter: blur(5px);
 }
 .arrow {
+  margin-top: auto;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
