--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow: hidden;
 }
 .backgroundWrapper {
   position: absolute;
